--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
 
  <script>
 $(function(){
-var intv = setInterval(function(){ $(".copybutton").html('Copy'); }, 20);
+var intv = setInterval(function(){ $(".copybutton").html('Kopyala'); }, 20);
   $("body").on('click',".copybutton",function() { 
 $(".copybutton").html('Copy');
 swal({
