--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+<!-- TEXT AREA NOT FIXED 
 <script>
      $(window).scroll(function(){
       var sticky = $('.fancytext'),
@@ -17,7 +17,7 @@
       else sticky.removeClass('fixed');
     });
 </script>
-
+-->
 <link rel="stylesheet" href="style.css">
 
 </head>
@@ -81,7 +81,7 @@
 
 </script>
 
-    <textarea type="text" class="form-control fancytext" required="required" name="text" placeholder="Yazıyı buraya yaz ya da yapıştır .." value=""></textarea>
+  <textarea type="text" class="form-control fancytext" required="required" name="text" placeholder="Yazıyı buraya yaz ya da yapıştır .." value=""></textarea>
 
   <div id="result">
       
